[gd_scene load_steps=15 format=3 uid="uid://c5ved3kmx1fvn"]

[ext_resource type="PackedScene" uid="uid://d3fdd3hdc7p1q" path="res://enemies/enemy.tscn" id="1_7gllc"]
[ext_resource type="Texture2D" uid="uid://qt7em8qmwgan" path="res://enemies/mission1_enemies/slime/MediumSlime_Blue.png" id="2_be1e7"]
[ext_resource type="Script" path="res://enemies/mission1_enemies/slime/slime.gd" id="2_j02tm"]
[ext_resource type="Script" path="res://components/timed_state_componoent.gd" id="5_43m6u"]
[ext_resource type="Script" path="res://components/move_component.gd" id="5_0540v"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="7_3mws8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5m164"]
atlas = ExtResource("2_be1e7")
region = Rect2(0, 620, 310, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g8i1"]
atlas = ExtResource("2_be1e7")
region = Rect2(310, 620, 310, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_sudr0"]
atlas = ExtResource("2_be1e7")
region = Rect2(620, 620, 310, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_a85v4"]
atlas = ExtResource("2_be1e7")
region = Rect2(930, 620, 310, 310)

[sub_resource type="SpriteFrames" id="SpriteFrames_7i65c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m164")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g8i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sudr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a85v4")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p5nrw"]
radius = 9.05539

[sub_resource type="CircleShape2D" id="CircleShape2D_chodt"]
radius = 6.08276

[sub_resource type="GDScript" id="GDScript_b8o32"]
script/source = "class_name MoveComponent2
extends Node

@export var actor: Node2D
@export var velocity: Vector2

func _process(delta: float) -> void:
	actor.translate(velocity * delta)
"

[node name="Slime" instance=ExtResource("1_7gllc")]
script = ExtResource("2_j02tm")

[node name="AnimatedSprite2D" parent="." index="0"]
position = Vector2(1, -2)
scale = Vector2(0.09, 0.09)
sprite_frames = SubResource("SpriteFrames_7i65c")
autoplay = "default"
frame_progress = 0.722764

[node name="StatsComponent" parent="." index="1"]
health = 5

[node name="MoveComponent" parent="." index="2"]
velocity = Vector2(0, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_p5nrw")
debug_color = Color(0.77372, 0.440379, 0.0984363, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_chodt")

[node name="States" type="Node" parent="." index="11"]

[node name="MoveSideState" type="Node" parent="States" index="0"]
unique_name_in_owner = true
script = ExtResource("5_43m6u")
duration = 3.0

[node name="MoveSideComponent" type="Node" parent="States/MoveSideState" index="0" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("5_0540v")
actor = NodePath("../../..")

[node name="BorderBounceComponent" type="Node" parent="States/MoveSideState" index="1" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("7_3mws8")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")

[node name="MoveDownState" type="Node" parent="States" index="1"]
unique_name_in_owner = true
script = ExtResource("5_43m6u")
duration = 0.5

[node name="MoveComponent" type="Node" parent="States/MoveDownState" index="0" node_paths=PackedStringArray("actor")]
script = SubResource("GDScript_b8o32")
actor = NodePath("../../..")
velocity = Vector2(0, 25)

[node name="PauseState" type="Node" parent="States" index="2"]
unique_name_in_owner = true
script = ExtResource("5_43m6u")
duration = 0.5
